Various fixes
- locator message now with space
- hide the scrollbar when print (firefox has some strange thing and
print only first page... need to try in other pc)
- change the main control dimension to fit 256 pixel in half of space
(from 500px to 512px)

--- a/klab.engine/src/main/resources/static/shared/report.css
+++ b/klab.engine/src/main/resources/static/shared/report.css
@@ -1,10 +1,13 @@
 @media print {
   #mc-report-wrapper #mc-report-content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    left: 0;
+    display: block !important;
+    position: relative !important;
+    overflow: visible !important;
+    overflow-y: visible !important;
+    width: 100% !important;
+    height: 100% !important;
+    margin: 0 !important;
+    left: 0 !important;
   }
 }
 #mc-empty-report {
@@ -30,11 +33,11 @@
   width: 1024px;
   left: 50%;
   margin-left: -512px;
-  margin-top: 3em;
+  padding-top: 3em;
   background-color: #fff;
   height: 100%;
   padding: 2em;
-
+  overflow: auto;
 }
 #mc-report-content h1,
 #mc-report-content h2,
